minimize docker image size.